--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           name: temp
       - run: tar -vxzf temp.tar.gz && rm temp.tar.gz
-      - run: node common/scripts/install-run-rush.js publish -a -b targetBranch -p -r $NPM_REGISTRY_URL -n $NODE_AUTH_TOKEN --add-commit-details
+      - run: node common/scripts/install-run-rush.js publish -a -b master -p -r $NPM_REGISTRY_URL -n $NODE_AUTH_TOKEN --add-commit-details
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
           NPM_REGISTRY_URL: "https://registry.npmjs.org/"
@@ -57,7 +57,7 @@ jobs:
         with:
           name: temp
       - run: tar -vxzf temp.tar.gz && rm temp.tar.gz
-      - run: node common/scripts/install-run-rush.js publish -a -b targetBranch -p -r $NPM_REGISTRY_URL -n $NODE_AUTH_TOKEN --add-commit-details
+      - run: node common/scripts/install-run-rush.js publish -a -b master -p -r $NPM_REGISTRY_URL -n $NODE_AUTH_TOKEN --add-commit-details
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NPM_REGISTRY_URL: "https://npm.pkg.github.com/jdachtera"
