--- a/packages/my-library/package.json
+++ b/packages/my-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jdachtera/rush-js-template-my-library",
-  "version": "1.0.0s",
+  "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
