--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -40,7 +40,7 @@ jobs:
           name: temp
       - run: tar -vxzf temp/temp.tar.gz && rm temp/temp.tar.gz
       - run: git config --global user.email "ci@example.com" && git config --global user.name "Github Actions"
-      - run: git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+      - run: git remote set-url origin https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git
       - run: node common/scripts/install-run-rush.js publish -a -b master -p -r $NPM_REGISTRY_URL -n $NODE_AUTH_TOKEN --add-commit-details
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
@@ -60,7 +60,7 @@ jobs:
           name: temp
       - run: tar -vxzf temp/temp.tar.gz && rm temp/temp.tar.gz
       - run: git config --global user.email "ci@example.com" && git config --global user.name "Github Actions"
-      - run: git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+      - run: git remote set-url origin https://$GITHUB_ACTOR:$GITHUB_TOKENs@github.com/$GITHUB_REPOSITORY.git
       - run: node common/scripts/install-run-rush.js publish -a -b master -p -r $NPM_REGISTRY_URL -n $NODE_AUTH_TOKEN --add-commit-details
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
